--- a/MOD550-task1/task1.ipynb
+++ b/MOD550-task1/task1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fe894c13",
    "metadata": {},
    "outputs": [
@@ -39,18 +39,14 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from data_aquisition import DataAquisition \n",
+    "from data_aquisition import DataAquisition as aq\n",
     "\n",
     "size = 10000\n",
     "\n",
-    "# Creating two different distributions from numpy library\n",
-    "random_dist_poisson = np.random.triangular(left=0, mode=5, right=10, size=size)\n",
-    "random_dist_exponential = np.random.normal(loc=5, scale=2, size=size)\n",
-    "\n",
-    "random_combined = np.column_stack((random_dist_poisson, random_dist_exponential))\n",
+    "random_2d = aq.random_2d_dist(size=size)\n",
     "\n",
     "\n",
-    "aq_instance = DataAquisition(random_combined)\n",
+    "aq_instance = aq(random_2d)\n",
     "\n",
     "aq_instance.plot_histograms()\n",
     "\n"
