--- a/MOD550-task1/task1.ipynb
+++ b/MOD550-task1/task1.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "f783e9ce",
    "metadata": {},
    "outputs": [
@@ -366,34 +366,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Values (Release year): [1874. 1878. 1881. 1882. 1883. 1885. 1887. 1888. 1889. 1890. 1891. 1892.\n",
-      " 1893. 1894. 1895. 1896. 1897. 1898. 1899. 1900. 1901. 1902. 1903. 1904.\n",
-      " 1905. 1906. 1907. 1908. 1909. 1910. 1911. 1912. 1913. 1914. 1915. 1916.\n",
-      " 1917. 1918. 1919. 1920. 1921. 1922. 1923. 1924. 1925. 1926. 1927. 1928.\n",
-      " 1929. 1930. 1931. 1932. 1933. 1934. 1935. 1936. 1937. 1938. 1939. 1940.\n",
-      " 1941. 1942. 1943. 1944. 1945. 1946. 1947. 1948. 1949. 1950. 1951. 1952.\n",
-      " 1953. 1954. 1955. 1956. 1957. 1958. 1959. 1960. 1961. 1962. 1963. 1964.\n",
-      " 1965. 1966. 1967. 1968. 1969. 1970. 1971. 1972. 1973. 1974. 1975. 1976.\n",
-      " 1977. 1978. 1979. 1980. 1981. 1982. 1983. 1984. 1985. 1986. 1987. 1988.\n",
-      " 1989. 1990. 1991. 1992. 1993. 1994. 1995. 1996. 1997. 1998. 1999. 2000.\n",
-      " 2001. 2002. 2003. 2004. 2005. 2006. 2007. 2008. 2009. 2010. 2011. 2012.\n",
-      " 2013. 2014. 2015. 2016. 2017. 2018. 2019. 2020. 2021. 2022. 2023. 2024.\n",
-      " 2025. 2026.   nan]\n"
-     ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "aq_instance2.plot_all_cdfs()\n",
-    "\n",
-    "values, cdf = aq_instance2.cdf(column=0)\n",
-    "print(\"Values (Release year):\", values)\n"
+    "aq_instance2.plot_all_cdfs()"
    ]
   }
  ],
