--- a/MOD550-task2/task2.ipynb
+++ b/MOD550-task2/task2.ipynb
@@ -31,19 +31,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3d2efd3",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "id": "ff0a4fc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File found: ../title.basics.tsv\n",
+      "File found: ../data/title.ratings.tsv\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../MOD550-task1')  # replace with the actual folder path\n",
+    "\n",
+    "from data_aquisition import DataAquisition as aq\n",
+    "aqinstance = aq()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc3151b",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "compiled_df['startYear'] = pd.to_numeric(compiled_df['startYear'], errors='coerce') # Convert to numeric, setting errors to NaN\n",
+    "\n",
+    "compiled_df = compiled_df.rename(columns={\n",
+    "    'tconst': 'Title ID',\n",
+    "    'startYear': 'Release year',\n",
+    "    'averageRating': 'Rating',\n",
+    "    'numVotes': 'Number of votes'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d2b81424",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../title.basics.tsv\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming aqinstance has a method or attribute to access the data, e.g., aqinstance.data or aqinstance.get_data()\n",
+    "# Let's read 'tconst' and one other column, e.g., 'title'\n",
+    "print(aqinstance.basics_path_)\n",
+    "data = aqinstance.read_file_tsv(aqinstance.basics_path_, columns=['tconst', 'startYear'], nrows=None)\n",
+    "data2= aqinstance.read_file_tsv(aqinstance.basics_path_, columns=['tconst', 'primaryTitle'], nrows=None)\n",
+    "data3 = aqinstance.read_file_tsv(aqinstance.basics_path_, columns=['tconst', 'genres'], nrows=None)\n",
+    "\n",
+    "data5 = aqinstance.read_file_tsv(aqinstance.ratings_path_, columns=['tconst', 'averageRating', 'numVotes'], nrows=None)\n",
+    "print(data3.head())"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
