--- a/MOD550-task2/task2.ipynb
+++ b/MOD550-task2/task2.ipynb
@@ -31,6 +31,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe9bfef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from data_aquisition import DataAquisition as aq\n",
+    "\n",
+    "class DataModel:\n",
+    "    def __init__(self):\n",
+    "        sys.path.append('../MOD550-task1') \n",
+    "\n",
+    "        self.data = aq().data\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd29a909",
+   "metadata": {},
+   "source": [
+    "**Task 1**  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ff0a4fc2",
    "metadata": {},
    "outputs": [
@@ -41,71 +68,155 @@
       "File found: ../title.basics.tsv\n",
       "File found: ../data/title.ratings.tsv\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title ID</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>originalTitle</th>\n",
+       "      <th>isAdult</th>\n",
+       "      <th>Release year</th>\n",
+       "      <th>endYear</th>\n",
+       "      <th>Runtime (minutes)</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Number of votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0000001</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>Carmencita</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1894.0</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Documentary,Short</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0000002</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Le clown et ses chiens</td>\n",
+       "      <td>Le clown et ses chiens</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892.0</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Animation,Short</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0000003</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Poor Pierrot</td>\n",
+       "      <td>Pauvre Pierrot</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1892.0</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Animation,Comedy,Romance</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0000005</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>Blacksmith Scene</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1893.0</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Short</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0000006</td>\n",
+       "      <td>short</td>\n",
+       "      <td>Chinese Opium Den</td>\n",
+       "      <td>Chinese Opium Den</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1894.0</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Short</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Title ID   Type                   Title           originalTitle  isAdult  \\\n",
+       "0  tt0000001  short              Carmencita              Carmencita        0   \n",
+       "1  tt0000002  short  Le clown et ses chiens  Le clown et ses chiens        0   \n",
+       "2  tt0000003  short            Poor Pierrot          Pauvre Pierrot        0   \n",
+       "3  tt0000005  short        Blacksmith Scene        Blacksmith Scene        0   \n",
+       "4  tt0000006  short       Chinese Opium Den       Chinese Opium Den        0   \n",
+       "\n",
+       "   Release year endYear  Runtime (minutes)                    Genres  Rating  \\\n",
+       "0        1894.0      \\N                1.0         Documentary,Short     5.7   \n",
+       "1        1892.0      \\N                5.0           Animation,Short     5.5   \n",
+       "2        1892.0      \\N                5.0  Animation,Comedy,Romance     6.4   \n",
+       "3        1893.0      \\N                1.0                     Short     6.2   \n",
+       "4        1894.0      \\N                1.0                     Short     5.0   \n",
+       "\n",
+       "   Number of votes  \n",
+       "0             2181  \n",
+       "1              301  \n",
+       "2             2248  \n",
+       "3             2990  \n",
+       "4              220  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append('../MOD550-task1')  # replace with the actual folder path\n",
-    "\n",
-    "from data_aquisition import DataAquisition as aq\n",
-    "aqinstance = aq()\n",
-    "\n",
-    "\n"
+    "dataw = DataModel()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bc3151b",
+   "id": "2d539f1f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "compiled_df['startYear'] = pd.to_numeric(compiled_df['startYear'], errors='coerce') # Convert to numeric, setting errors to NaN\n",
-    "\n",
-    "compiled_df = compiled_df.rename(columns={\n",
-    "    'tconst': 'Title ID',\n",
-    "    'startYear': 'Release year',\n",
-    "    'averageRating': 'Rating',\n",
-    "    'numVotes': 'Number of votes'\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "d2b81424",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../title.basics.tsv\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "# Assuming aqinstance has a method or attribute to access the data, e.g., aqinstance.data or aqinstance.get_data()\n",
-    "# Let's read 'tconst' and one other column, e.g., 'title'\n",
-    "print(aqinstance.basics_path_)\n",
-    "data = aqinstance.read_file_tsv(aqinstance.basics_path_, columns=['tconst', 'startYear'], nrows=None)\n",
-    "data2= aqinstance.read_file_tsv(aqinstance.basics_path_, columns=['tconst', 'primaryTitle'], nrows=None)\n",
-    "data3 = aqinstance.read_file_tsv(aqinstance.basics_path_, columns=['tconst', 'genres'], nrows=None)\n",
-    "\n",
-    "data5 = aqinstance.read_file_tsv(aqinstance.ratings_path_, columns=['tconst', 'averageRating', 'numVotes'], nrows=None)\n",
-    "print(data3.head())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
