--- a/MOD550-task2/task2.ipynb
+++ b/MOD550-task2/task2.ipynb
@@ -103,7 +103,7 @@
     "            val_ratio: Proportion of data to use for validation.\n",
     "            seed (int, optional): Random seed for reproducibility.\n",
     "        Returns:\n",
-    "            tuple: (train_data, val_data, test_data) as lists of row dicts.\n",
+    "            tuple: (train_data, val_data, test_data) as lists of row dicts (vanilla python). NOT dataframes.\n",
     "        \"\"\"\n",
     "        if train_ratio + val_ratio > 1:\n",
     "            raise ValueError(\"Ratios are over 1\")\n",
@@ -213,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(7.0657166085933705)"
+       "np.float64(6.973642029930682)"
       ]
      },
      "execution_count": 3,
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "45f4f005",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "c543eceb",
    "metadata": {},
    "outputs": [
@@ -254,9 +254,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of training set: 191088\n",
-      "Length of validation set: 40947\n",
-      "Length of test set: 40949\n"
+      "Length of training set: 174570\n",
+      "Length of validation set: 37408\n",
+      "Length of test set: 37409\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7612c1c2",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept (b0): -6.3419693651290885 Slope (b1): 0.006570642790351797 MSE: 1.834137841834273\n"
+      "Intercept (b0): -3.9954794702222465 Slope (b1): 0.005376612727458559 MSE: 1.8348214039826294\n"
      ]
     }
    ],
@@ -417,16 +417,62 @@
    "id": "880a47bf",
    "metadata": {},
    "source": [
-    "**Part 7**"
+    "**Part 7**  \n",
+    "Linear regression on the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f113334d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: [-0.0015162   0.00336775  0.08760844 -0.00914898]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "X = dataw.data[['Runtime', 'Release year', 'Words in title', 'Length of title']].to_numpy()\n",
+    "y = dataw.data['Rating'].to_numpy()\n",
+    "\n",
+    "# Calculate beta using the normal equation, given in presentation 008\n",
+    "beta = np.linalg.inv(X.T @ X) @ X.T @ y\n",
+    "\n",
+    "\n",
+    "print(\"Coefficients:\", beta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c0b2d48",
+   "metadata": {},
+   "source": [
+    "**Part 8**  \n",
+    "Linear regression on train data, then test."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f113334d",
+   "id": "5c36ecd0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trainig_data, unused, testing_data = dataw.train_val_test_split(train_ratio=0.7, val_ratio=0 ,seed=1)\n",
+    "X_train = np.array([[row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']] for row in trainig_data])\n",
+    "y_train = np.array([row['Rating'] for row in trainig_data])\n",
+    "\n",
+    "X_test = np.array([[row['Runtime'], row['Release year'], row['Words in title'], row['Length of title']] for row in testing_data])\n",
+    "y_test = np.array([row['Rating'] for row in testing_data])  \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
